--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,5 @@ MONGODB_URI=your_mongodb_uri
 PORT=port
 NODE_ENV=node_environment
 CLIENT_URL=your_client_url
+JWT_SECRET=random_secret_key
+JWT_EXPIRE=token_expiration_time
