--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-MONGODB_URI=your_mongodb_uri
-PORT=port
-NODE_ENV=node_environment
+MONGODB_URI=your_mongodb_connection_string
+PORT=5001
+NODE_ENV=development
 CLIENT_URL=your_client_url
-JWT_SECRET=random_secret_key
-JWT_EXPIRE=token_expiration_time
+JWT_SECRET=your_jwt_secret_key
+JWT_EXPIRE=your_jwt_expire_time
