--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flowtask-backend",
+  "name": "taskflow-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
